# cangjie-images

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-versions.yml
docs/: dockerhub.md
scripts/: cangjie-entrypoint.sh  install-base-deps.sh  install-cangjie.sh
src/cangjie_images/: __init__.py  __main__.py  cli.py  config.py  dockerfile.j2  generator.py  http_client.py  models.py  planner.py  prepare.py  templates.py
tests/: test_planner.py  test_prepare.py  test_repo_metadata.py  test_templates.py
versions/lts/1.0.0/bookworm/amd64/: Dockerfile
versions/lts/1.0.0/bookworm/arm64/: Dockerfile
versions/lts/1.0.0/bullseye/amd64/: Dockerfile
versions/lts/1.0.0/bullseye/arm64/: Dockerfile
versions/lts/1.0.0/openeuler-20.03/amd64/: Dockerfile
versions/lts/1.0.0/openeuler-20.03/arm64/: Dockerfile
versions/lts/1.0.0/openeuler-22.03/amd64/: Dockerfile
versions/lts/1.0.0/openeuler-22.03/arm64/: Dockerfile
versions/lts/1.0.0/openeuler-24.03/amd64/: Dockerfile
versions/lts/1.0.0/openeuler-24.03/arm64/: Dockerfile
versions/lts/1.0.0/slim-bookworm/amd64/: Dockerfile
versions/lts/1.0.0/slim-bookworm/arm64/: Dockerfile
versions/lts/1.0.0/slim-bullseye/amd64/: Dockerfile
versions/lts/1.0.0/slim-bullseye/arm64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-20.03/amd64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-20.03/arm64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-22.03/amd64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-22.03/arm64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-24.03/amd64/: Dockerfile
versions/lts/1.0.0/slim-openeuler-24.03/arm64/: Dockerfile
versions/lts/1.0.0/slim-trixie/amd64/: Dockerfile
versions/lts/1.0.0/slim-trixie/arm64/: Dockerfile
(+242 files in other folders)
