[project]
name = "cangjie-images"
version = "0.1.0"
description = "Automated planning and publishing for Cangjie Docker images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.9,<3",
  "tenacity>=9,<10",
]

[project.scripts]
cangjie-images = "cangjie_images.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9",
]

[tool.pytest.ini_options]
addopts = ["-ra"]
pythonpath = ["src"]
testpaths = ["tests"]
