[project]
name = "cangjie-images"
version = "0.1.0"
description = "Automated planning and publishing for Cangjie Docker images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.9,<3",
  "tenacity>=9,<10",
]

[project.scripts]
cangjie-images = "cangjie_images.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pyright>=1.1.380,<2",
  "pytest>=8.3.5,<9",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
addopts = ["-ra"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501", # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
